--- a/cards/estilos.css
+++ b/cards/estilos.css
@@ -1,52 +1,61 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.backgroundCustom {
+    background-color: rgb(2, 78, 18);
+    background-image: url(img/cnI01_patternGreenCircle.jpg);
+    repeat: repeat;
+    margin-top: 0pz;
+    width: 100vw;
+    height: 100vh;
+    margin-bottom: 0px;
+    padding-top: 0px
 }
 
 .row-cols-1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  }
-  
-  .row-cols-md-2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-  }
-  
-  .g-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  
-  }
-  
-  
-
-
-.card-title{
-  font-size: 1.5rem;
-  font-style: normal;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #DD4A48;
 }
 
-
-.card-text{
-  font-size: 1rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-style: normal;
-  color: #79018C;
+.row-cols-md-2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
-.navbar{
-margin-top: 3rem;
-} 
+.g-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.card-title {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #DD4A48;
+}
+
+.card-text {
+    font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    color: #79018C;
+}
+
+.navbar {
+    margin-top: 3rem;
+}
+
 .navbar-expand-lg {
-margin-top: 3rem;
+    margin-top: 3rem;
 }
+
 .navbar-light {
-margin-top: 3rem;
+    margin-top: 3rem;
 }
-.bg-primary{
-margin-top: 3rem;
+
+.bg-primary {
+    margin-top: 3rem;
 }
