--- a/res/CSS/styleAgradecer.css
+++ b/res/CSS/styleAgradecer.css
@@ -1,33 +1,56 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.backgroundCustom {
-  background-color: linear-gradient(to right top, #00ff21, #00ff1d, #00ff18, #00ff13, #00ff0c, #00ff22, #00ff2f, #00ff3a, #00ff4f, #00ff61, #0eff70, #1cff7e);
-  background-image: url("../img/bgPath01.jpg");
-  background-repeat: repeat;
+.backgroundCustomREDBG {
+    background-image: url("../img/redBG.jpg");
+    background-repeat: repeat;
+    max-height: 100vh;
+    height: 100%;
 }
+
 .navbarCustomize {
-  background-color: rgb(255, 243, 12);
-  border: 0.5px groove rgb(179, 183, 68);
-  border-radius: 10px;
-  margin-top: 2vh;
+    background-color: rgb(255, 243, 12);
+    border: 0.5px groove rgb(179, 183, 68);
+    border-radius: 10px;
+    margin-top: 2vh;
 }
-
 
 .navCustomText {
-  font-family: 'Quantico'sans-serif;
+    font-family: 'Quantico'sans-serif;
 }
 
 .containerHero {
-  background: gainsboro;
-  margin: 0px;
-  padding: 0px;
-  width: 100vw;
+    background: gainsboro;
+    s margin: 0px;
+    padding: 0px;
+    width: 100vw;
 }
 
 .timeTitle {
-  font-family: 'Nosifer', cursive;
-  font-size: 2rem;
-  font-weight: 400px;
+    font-family: 'Nosifer', cursive;
+    font-size: 2rem;
+    font-weight: 400px;
+}
+
+#wrapperAnimation {
+    vertical-align: center;
+    margin-bottom: 0px;
+}
+
+.animationCreditsNameT {
+    background-color: white;
+    height: 5vh;
+    font-family: Carme;
+    font-size: 16px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 2rem;
+    h5 p {
+        font-size: 2em;
+        background-color: white;
+        font-size: 2em;
+    }
 }
